--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desifaves order confirmation</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <title>Desifaves</title>
+  <link rel="icon" type="image/x-icon" href="https://www.desifaves.com/favicon.ico">
+    <link rel="stylesheet" href="https://www.desifaves.com/style.css">
 </head>
 <body>
   
-    <form 
-    action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdCGWcTA6G1OQ6ZMI22t0gyrp1iA8YZeM3lGNbjT7hWMXNKfg/formResponse" method="post">
+    <form>
     <div class=“form”>
-        <img src= "Desifaves_logo.png" width="400" height="auto"></div>
+        <img src= "https://www.desifaves.com/Desifaves_logo.png" width="400" height="auto"></div>
     </br>
     <hr class="class-5">
 
-        <h1>Bringing exciting things for you! stay tuned..</br><a href="https://api.whatsapp.com/send?phone=6598576957&amp;text=I'm%20interested!">Whatsapp for orders</a>
+        <h1>Traditional Indian Clothing and Ethnic Wear for Women, Men and Kids.</h1>
+            <h2>All collections online at <a href="http://www.instagram.com/desifaves">Insta page</a></h2>
+        </br><a href="https://api.whatsapp.com/send?phone=6590570357&amp;text=I'm%20interested!">Whatsapp for orders</a>
 
-        </h1>
+        
         
     </form>
 </body>
