--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <h1>Traditional Indian Clothing and Ethnic Wear for Women, Men and Kids.</h1>
             <h2>All collections online at <a href="http://www.instagram.com/desifaves">Insta page</a></h2>
-        </br><a href="https://api.whatsapp.com/send?phone=6590570357&amp;text=I'm%20interested!">Whatsapp for orders</a>
+        </br><a href="https://api.whatsapp.com/send?phone=6590570357&amp;text=I'm%20interested!">WhatsApp for orders</a>
 
         
         
