--- a/jobs/index.html
+++ b/jobs/index.html
@@ -3,40 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desifaves order confirmation</title>
+    <title>Desifaves job openings</title>
   <link rel="icon" type="image/x-icon" href="https://www.desifaves.com/favicon.ico">
     <link rel="stylesheet" href="https://www.desifaves.com/order/style.css">
 </head>
 <body>
-  
-    <form 
-    action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdCGWcTA6G1OQ6ZMI22t0gyrp1iA8YZeM3lGNbjT7hWMXNKfg/formResponse" method="post">
     <div class=“logo”>
         <img src= "https://www.desifaves.com/Desifaves_logo.png" width="250" height="122"></div>
-        </div><h1>Please enter your details to process</h1>
+    <h1>Job 1</h1>
+    <p>Job role
+Online store manager
 
-        <div class="form-element">
-            <input type="text" name="entry.2005620554" required placeholder="Name">
-        </div>
-        <div class="form-element">
-            <input type="text" name="entry.1166974658" required placeholder="Mobile number">
-        </div>
-        <div class="form-element">
-            <input type="text" name="entry.1028988059" required placeholder="Address">
-        </div>
+Industry
+Online clothing/ retail
 
-        <div class="form-element">
-            <input type="text" name="entry.788745619" required placeholder="#floor-unit no.(if not applicable enter #01-01)">
-        </div>
-        <div class="form-element">
-            <input type="text" name="entry.1065046570" required placeholder="Postal code">
-        </div>
-       
-    
-        <div class="form-element">
-            <textarea name="entry.202050031" id="" cols="38" rows="2" placeholder="Add notes if any"></textarea>
-        </div>
+Monthly salary
+10,000 - 15,000 a month
+
+Job type
+Full time (Remote)
+
+Benefits
+Mobile data allowance
+
+About company
+Desifaves is an online retail brand specialising in traditional Indian clothing and ethnic wear for women, men and kids.
+
+Key responsibilities
+Handle Instagram account, post photos, videos, respond to order enquires in chat
+Receive and maintain order log 
+Engage with external vendors, deliver and receive products 
+
+Requirements
+Education: Graduate/Diploma
+Experience: 1-2 years of experience working in retail clothing industry. Fresher, having passion for clothing industry will also be considered
+Language: English, Tamil, Hindi (added advantage)
+Experience using Instagram and other social media platforms is a must</p>
         <button type="submit">Submit details</button>
-    </form>
 </body>
 </html>
