--- a/index.html
+++ b/index.html
@@ -5,22 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desifaves</title>
   <link rel="icon" type="image/x-icon" href="https://www.desifaves.com/favicon.ico">
-    <link rel="stylesheet" href="https://www.desifaves.com/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   
     <form>
     <div class=“form”>
-        <img src= "https://www.desifaves.com/Desifaves_logo.png" width="400" height="auto"></div>
-    </br>
+        <img src= "https://www.desifaves.com/Desifaves_logo.png" width="400" height="auto">
     <hr class="class-5">
 
-        <h1>Traditional Indian Clothing and Ethnic Wear for Women, Men and Kids.</h1>
-            <h2>All collections online at <a href="http://www.instagram.com/desifaves">Insta page</a></h2>
-        </br><a href="https://api.whatsapp.com/send?phone=6590570357&amp;text=I'm%20interested!">WhatsApp for orders</a>
-
-        
-        
+        <div><span class="dbold">Job role</span></br><span class="dregular">Online store manager</span></div>
+        </br>
+        <div><span class="dbold">Industry</span></br><span class="dregular">Online clothing/ retail</span></div>
+        </br>
+<div><span class="dbold">Job type</span></br><span class="dregular">Full time (Remote)</span></div>
+        </br>
+<div><span class="dbold">Monthly salary</span></br><span class="dregular">10,000 - 15,000</span></div>
+        </br>
+<div><span class="dbold">Benefits</span></br><span class="dregular">Mobile data allowance</span></div>
+        </br>
+<div><span class="dbold">About company</span></br><span class="dregular">Desifaves is an online retail brand specialising in traditional Indian clothing and ethnic wear for women, men and kids.
+</span></div>
+        </br>
+<div><span class="dbold">Key responsibilities</span></br><span class="dregular"><ul>
+  <li>Handle Instagram account, post photos, videos, respond to order enquires in chat
+</li>
+  <li>Receive and maintain order log </li>
+  <li>Engage with external vendors, deliver and receive products
+</li>
+</ul>  </span></div>
+        </br>
+<div><span class="dbold">Requirements</span></br><span class="dregular"><ul>
+  <li>Education: Graduate/Diploma
+</li>
+  <li>Experience: 1-2 years of experience working in retail clothing industry. Fresher, having passion for clothing industry will also be considered</li>
+  <li>Language: English, Tamil, Hindi (added advantage)
+</li>
+    <li>Experience using Instagram and other social media platforms is a must
+</li>
+</ul>  </span></div>
+        </br>
+        </div>
     </form>
 </body>
 </html>
