--- a/jobs/index.html
+++ b/jobs/index.html
@@ -3,42 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desifaves job openings</title>
+    <title>Desifaves</title>
   <link rel="icon" type="image/x-icon" href="https://www.desifaves.com/favicon.ico">
-    <link rel="stylesheet" href="https://www.desifaves.com/order/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class=“logo”>
-        <img src= "https://www.desifaves.com/Desifaves_logo.png" width="250" height="122"></div>
-    <h1>Job 1</h1>
-    <p>Job role
-Online store manager
+  
+    <form>
+    <div class=“form”>
+        <img src= "https://www.desifaves.com/Desifaves_logo.png" width="400" height="auto">
+    <hr class="class-5">
 
-Industry
-Online clothing/ retail
-
-Monthly salary
-10,000 - 15,000 a month
-
-Job type
-Full time (Remote)
-
-Benefits
-Mobile data allowance
-
-About company
-Desifaves is an online retail brand specialising in traditional Indian clothing and ethnic wear for women, men and kids.
-
-Key responsibilities
-Handle Instagram account, post photos, videos, respond to order enquires in chat
-Receive and maintain order log 
-Engage with external vendors, deliver and receive products 
-
-Requirements
-Education: Graduate/Diploma
-Experience: 1-2 years of experience working in retail clothing industry. Fresher, having passion for clothing industry will also be considered
-Language: English, Tamil, Hindi (added advantage)
-Experience using Instagram and other social media platforms is a must</p>
-        <button type="submit">Submit details</button>
+        <div><span class="dbold">Job role</span></br><span class="dregular">Online store manager</span></div>
+        </br>
+        <div><span class="dbold">Industry</span></br><span class="dregular">Online clothing/ retail</span></div>
+        </br>
+<div><span class="dbold">Job type</span></br><span class="dregular">Full time (Remote)</span></div>
+        </br>
+<div><span class="dbold">Monthly salary</span></br><span class="dregular">10,000 - 15,000</span></div>
+        </br>
+<div><span class="dbold">Benefits</span></br><span class="dregular">Mobile data allowance</span></div>
+        </br>
+<div><span class="dbold">About company</span></br><span class="dregular">Desifaves is an online retail brand specialising in traditional Indian clothing and ethnic wear for women, men and kids.
+</span></div>
+        </br>
+<div><span class="dbold">Key responsibilities</span></br><span class="dregular"><ul>
+  <li>Handle Instagram account, post photos, videos, respond to order enquires in chat
+</li>
+  <li>Receive and maintain order log </li>
+  <li>Engage with external vendors, deliver and receive products
+</li>
+</ul>  </span></div>
+        </br>
+<div><span class="dbold">Requirements</span></br><span class="dregular"><ul>
+  <li>Education: Graduate/Diploma
+</li>
+  <li>Experience: 1-2 years of experience working in retail clothing industry. Fresher, having passion for clothing industry will also be considered</li>
+  <li>Language: English, Tamil, Hindi (added advantage)
+</li>
+    <li>Experience using Instagram and other social media platforms is a must
+</li>
+</ul>  </span></div>
+        </br>
+        </div>
+    </form>
 </body>
 </html>
