--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
 
         <h1>Traditional Indian Clothing and Ethnic Wear for Women, Men and Kids.</h1>
             <h2>All collections online at <a href="http://www.instagram.com/desifaves">Insta page</a></h2>
-        </br><a aria-label="Chat on WhatsApp" href="https://wa.me/1XXXXXXXXXX"> <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.svg" />
-<a />
-        
+        </br><a aria-label="Chat on WhatsApp" href="https://wa.me/6583399946"> <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.svg" />
+<a /> </br> </br>
+        <hr class="class-5">
+         <footer>
+<ul>
+  
+     <li style="display:inline-block;"><a href="https://www.desifaves.com/order">Orders | </a> </li>
+    <li style="display:inline-block;"><a href="https://www.desifaves.com/jobs">Jobs</a></li></ul>
+
+</footer>
         
     </form>
+   
 </body>
 </html>
