--- a/jobs/index.html
+++ b/jobs/index.html
@@ -10,8 +10,8 @@
 <body>
   
     <form>
-    <div class=“form”>
-        <img src= "https://www.desifaves.com/Desifaves_logo.png" width="400" height="auto">
+    <div class=“form” style="display:inline-block;width:500px;">
+        <span class="desif"><img src= "https://www.desifaves.com/Desifaves_logo.png"  width="250" height="auto"></span>
     <hr class="class-5">
 
         <div><span class="dbold">Job role</span></br><span class="dregular">Online store manager</span></div>
@@ -22,7 +22,7 @@
         </br>
 <div><span class="dbold">Benefits</span></br><span class="dregular">Mobile data allowance</span></div>
         </br>
-<div><span class="dbold">About company</span></br><span class="dregular">Desifaves is an online retail brand specialising in traditional Indian clothing and ethnic wear for women, men and kids.
+<div><span class="dbold">About company</span></br><span class="dregular" >Desifaves is an online retail brand specialising in traditional Indian clothing and ethnic wear for women, men and kids.
 </span></div>
         </br>
 <div><span class="dbold">Key responsibilities</span></br><span class="dregular"><ul>
@@ -43,6 +43,8 @@
 </li>
 </ul>  </span></div>
         </br>
+</br><a aria-label="Chat on WhatsApp" href="https://wa.me/6583399946"> <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.svg" />
+<a /> </br> </br>
         </div>
     </form>
 </body>
