--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Desifaves</title>
   <link rel="icon" type="image/x-icon" href="https://www.desifaves.com/favicon.ico">
     <link rel="stylesheet" href="https://www.desifaves.com/style.css">
+     <meta property="og:title" content="Traditional Indian Clothing and Ethnic Wear for Women, Men and Kids."> 
+<meta property="og:description" content="Traditional Indian Clothing and Ethnic Wear for Women, Men and Kids."> 
+<meta property="og:image" content="https://www.desifaves.com/Desifaves_logo.png"> 
+<meta property="og:url" content="https://www.desifaves.com"> 
 </head>
 <body>
   
