--- a/jobs/index.html
+++ b/jobs/index.html
@@ -15,7 +15,7 @@
 <body>
   
     <form>
-    <div class=“form” style="display:inline-block;width:500px;">
+    <div class=“form” style="display:inline-block;">
         <span class="desif"><img src= "https://www.desifaves.com/Desifaves_logo.png"  width="250" height="auto"></span>
     <hr class="class-5">
 
