--- a/beat-the-heat/index.html
+++ b/beat-the-heat/index.html
@@ -14,7 +14,7 @@
 <body>
   
   
-   <object data="myfile.pdf" type="application/pdf" width="100%" height="100%">
+   <object data="BTH-DF.pdf" type="application/pdf" width="100%" height="100%">
   <p>Alternative text - include a link <a href="BTH-DF.pdf">to the PDF!</a></p>
 </object>
 </body>
