--- a/beat-the-heat/index.html
+++ b/beat-the-heat/index.html
@@ -14,8 +14,8 @@
 <body>
   
   
-   <object data="BTH-DF.pdf" type="application/pdf" width="100%" height="100%">
-  <p>Alternative text - include a link <a href="BTH-DF.pdf">to the PDF!</a></p>
+   <object data="DF-BTH.pdf" type="application/pdf" width="100%" height="100%">
+  <p>Beat the heat collection <a href="DF-BTH.pdf">to the PDF!</a></p>
 </object>
 </body>
 </html>
