--- a/beat-the-heat/index.html
+++ b/beat-the-heat/index.html
@@ -14,7 +14,7 @@
 <body>
   
   
-   <object data="DF-BTH.pdf" type="application/pdf" width="100%" height="100%">
+   <object data="DF-BTH.pdf" type="application/pdf" width="100vw" height="100vh">
   <p>Beat the heat collection <a href="DF-BTH.pdf">to the PDF!</a></p>
 </object>
 </body>
