--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <footer>
 <ul>
   
-     <li style="display:inline-block;"><a href="https://www.desifaves.com/order">Orders | </a> </li>
+     <li style="display:inline-block;"><a href="https://www.desifaves.com/order">Orders</a> </li>
 
 </footer>
         
